<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.RoboticsScoutingMatchApp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:title="Scout Match"
                app:titleTextColor="@color/aztech_yellow" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:divider="@drawable/vertical_padding_small"
                android:showDividers="beginning|middle"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="28sp"
                    android:text="@string/competition_header"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:paddingTop="16dp"/>

                <RadioGroup
                    android:id="@+id/competition_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:divider="@drawable/vertical_padding_small"
                    android:showDividers="middle">
                    <RadioButton android:id="@+id/comp_ns_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_northshore"/>
                    <RadioButton android:id="@+id/comp_western_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_western"/>
                    <RadioButton android:id="@+id/comp_gb_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_greaterboston"/>
                    <RadioButton android:id="@+id/comp_hf_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_hartford"/>
                    <RadioButton android:id="@+id/comp_unh_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_unh"/>
                    <RadioButton android:id="@+id/comp_minuteman_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_minuteman"/>
                    <RadioButton android:id="@+id/comp_mayhem_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_mayhem"/>
                    <RadioButton android:id="@+id/comp_bc_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_battlecry"/>
                    <RadioButton android:id="@+id/comp_nerd_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_nerd"/>
                    <RadioButton android:id="@+id/comp_bob_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_bay_battle"/>
                    <RadioButton android:id="@+id/comp_graniteState_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_granite_state"/>
                    <RadioButton android:id="@+id/comp_waterbury_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_waterbury"/>
                    <RadioButton android:id="@+id/comp_uri_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_uri"/>
                    <RadioButton android:id="@+id/comp_wpi_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_wpi"/>
                    <RadioButton android:id="@+id/comp_uvm_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_uvm"/>
                    <RadioButton android:id="@+id/comp_dcmp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_dcmp"/>
                    <RadioButton android:id="@+id/comp_worlds" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_worlds"/>
                    <RadioButton android:id="@+id/comp_test" android:layout_width="match_parent" android:layout_height="wrap_content" android:textSize="24sp" android:text="@string/comp_test"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end"
                    android:divider="@drawable/horizontal_padding_small"
                    android:showDividers="middle|end"
                    android:paddingEnd="16dp">
                    <Button
                        android:id="@+id/save_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:text="@string/button_next"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
